app/assets/stylesheets/ado-landing-pages.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.

 *= require toastr
 *= require font-awesome 
 *= require ado-landing-pages/libs/bootstrap
 *= require ado-landing-pages/libs/animate
 *= require ado-landing-pages/libs/venobox
 *= require ado-landing-pages/libs/owl.carousel
 *= require ado-landing-pages/style
 *= require ado-landing-pages/buy-ticket
 *= require ado-landing-pages/signup-nav
 *= require ado-landing-pages/index-bgs
 *= require_self
 */

.ado-landing-pages .full-height {
  height: 50vh;
}

.ado-landing-pages .section {
  padding: 60px 0 30px 0;
}

.ado-landing-pages .dark-header #header {
  background-color: #000;
}

.ado-landing-pages #steps img {
  width: 100%;
  margin: 0 auto;
  display: block;
  max-width: 400px;
}

.ado-landing-pages .guide img {
  width: 100%;
  max-width: 300px;
}

.ado-landing-pages .guide img.etcher {
  width: 100%;
  max-width: 100%;
}

